Bug 961598 - support DNS reslover. r=vchang